--- a/public/css/loggedin.css
+++ b/public/css/loggedin.css
@@ -145,12 +145,12 @@ input{
     background-color: white;
     position: absolute;
     left:35%;
-    padding:8%;
+    padding:7%;
     border-color: grey;
     border-style:solid;
     border-width:10px;
     border-radius:10%;
-    bottom:15%;
+    bottom:10%;
     text-align: center;
 }
 #vehicleInfo{
@@ -319,4 +319,17 @@ input{
     font-weight: 900;
     font-size: 200%;
     background-color:white;    
+}
+#guns{
+     overflow: scroll;
+    border-style: solid;
+    border-color:black;
+    border-width:1%;
+    padding:1%;
+    display:block;
+    height: 100px;
+    min-width: 400px;
+    max-width: 400px;
+    overflow-wrap: break-word;
+    overflow-x: hidden;
 }
